--- a/app/src/main/res/layout/activity_message_compose.xml
+++ b/app/src/main/res/layout/activity_message_compose.xml
@@ -1,4 +1,5 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:odoo="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DCE1E3"
@@ -19,7 +20,7 @@
             android:orientation="horizontal"
             android:weightSum="3" >
 
-            <com.openerp.util.tags.TagsView
+            <com.odoo.util.tags.TagsView
                 android:id="@+id/receipients_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -28,6 +29,16 @@
                 android:nextFocusDown="@+id/edtMessageSubject"
                 android:textColor="#828182" />
         </LinearLayout>
+
+        <EditText
+            android:id="@+id/edtMessageEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="sans-serif-light"
+            android:hint="Email"
+            android:singleLine="true" />
+
 
         <EditText
             android:id="@+id/edtMessageSubject"
