--- a/app/src/main/res/layout/activity_message_compose_attachment_grid.xml
+++ b/app/src/main/res/layout/activity_message_compose_attachment_grid.xml
@@ -3,13 +3,14 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <com.openerp.util.controls.ExpandableHeightGridView
+    <com.odoo.util.controls.ExpandableHeightGridView
         android:id="@+id/lstAttachments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:horizontalSpacing="5dp"
         android:numColumns="2"
         android:verticalSpacing="5dp" >
-    </com.openerp.util.controls.ExpandableHeightGridView>
+        </com.odoo.util.controls.ExpandableHeightGridView>
+
 
 </LinearLayout>
